[gd_scene load_steps=15 format=3 uid="uid://crlfq6s8l7fvl"]

[ext_resource type="Theme" uid="uid://bl03w1htwslkp" path="res://assets/button/custom_button.tres" id="1_nuv2b"]
[ext_resource type="Script" uid="uid://cuj31lfst68rl" path="res://GDscripts/menu.gd" id="2_jefjr"]
[ext_resource type="Texture2D" uid="uid://6tde23lkguq2" path="res://assets/Texture_Source/GUI.png" id="3_o5td3"]
[ext_resource type="PackedScene" uid="uid://bd8imhci6wyom" path="res://UI/BUTTON.tscn" id="5_3qhay"]
[ext_resource type="Script" uid="uid://lnx8vtc75mgj" path="res://GDscripts/shop.gd" id="5_gj576"]
[ext_resource type="Texture2D" uid="uid://qhii2wkp1m6b" path="res://assets/UI/PreviewBG/BG1.jpg" id="7_ildal"]

[sub_resource type="Animation" id="Animation_gj576"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SETTING:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SETTING:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SHOP:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SHOP:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Menu:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(196, 89.4999)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Menu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tot2t"]
resource_name = "hide_menu"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(196, 89.4999), Vector2(196, 79.5), Vector2(196, 350)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3qhay"]
resource_name = "hide_setting"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SETTING:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(600, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SETTING:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5lcxy"]
resource_name = "hide_shop"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SHOP:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(-600, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SHOP:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qwfe4"]
resource_name = "show_menu"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(196, 350), Vector2(196, 79.5), Vector2(196, 89.4999)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_ildal"]
resource_name = "show_setting"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SETTING:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(600, 0), Vector2(-10, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SETTING:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_cmiqy"]
resource_name = "show_shop"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SHOP:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.300563, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(-600, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SHOP:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ildal"]
_data = {
&"RESET": SubResource("Animation_gj576"),
&"hide_menu": SubResource("Animation_tot2t"),
&"hide_setting": SubResource("Animation_3qhay"),
&"hide_shop": SubResource("Animation_5lcxy"),
&"show_menu": SubResource("Animation_qwfe4"),
&"show_setting": SubResource("Animation_ildal"),
&"show_shop": SubResource("Animation_cmiqy")
}

[node name="UI" type="Control"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 3
anchor_left = 0.0967742
anchor_top = 0.0833333
anchor_right = 0.903226
anchor_bottom = 0.916667
offset_left = 150.0
offset_right = -150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_nuv2b")
script = ExtResource("2_jefjr")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Menu" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(120, 150)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38
anchor_top = 0.25
anchor_right = 0.62
anchor_bottom = 0.75
offset_left = 6.0
offset_top = 14.4999
offset_right = 6.0
offset_bottom = 14.4999
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o5td3")
region_rect = Rect2(0, 95.5297, 48.0967, 32.4703)
patch_margin_left = 6
patch_margin_top = 7
patch_margin_right = 6
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0833333
anchor_top = 0.0866667
anchor_right = 0.916667
anchor_bottom = 0.913333
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PLAYGAME" parent="Menu/VBoxContainer" instance=ExtResource("5_3qhay")]
layout_mode = 2
text = " PLAY"

[node name="SHOP" parent="Menu/VBoxContainer" instance=ExtResource("5_3qhay")]
layout_mode = 2
text = " SHOP"

[node name="SETTING" parent="Menu/VBoxContainer" instance=ExtResource("5_3qhay")]
layout_mode = 2
text = " SETTING"

[node name="QUIT" parent="Menu/VBoxContainer" instance=ExtResource("5_3qhay")]
layout_mode = 2
text = " QUIT"

[node name="SETTING" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o5td3")
region_rect = Rect2(0, 96, 48, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SETTING"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00967742
anchor_top = 0.0166667
anchor_right = 0.990323
anchor_bottom = 0.977778
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="SETTING/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "SETTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SETTING/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Settings" type="VBoxContainer" parent="SETTING/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="Label" type="Label" parent="SETTING/VBoxContainer/HBoxContainer/Settings"]
layout_mode = 2
text = "Resolution"

[node name="Label2" type="Label" parent="SETTING/VBoxContainer/HBoxContainer/Settings"]
layout_mode = 2
text = "SFX Volume"

[node name="Label3" type="Label" parent="SETTING/VBoxContainer/HBoxContainer/Settings"]
layout_mode = 2
text = "Game Volume"

[node name="properties" type="VBoxContainer" parent="SETTING/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="res_opt_btn" type="OptionButton" parent="SETTING/VBoxContainer/HBoxContainer/properties"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 5
theme_override_constants/arrow_margin = 13
alignment = 1

[node name="Label2" type="Label" parent="SETTING/VBoxContainer/HBoxContainer/properties"]
layout_mode = 2

[node name="Label3" type="Label" parent="SETTING/VBoxContainer/HBoxContainer/properties"]
layout_mode = 2

[node name="BackBtn" parent="SETTING/VBoxContainer" instance=ExtResource("5_3qhay")]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "BACK
"

[node name="SHOP" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o5td3")
region_rect = Rect2(0, 96, 48, 32)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 5
script = ExtResource("5_gj576")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="SHOP"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0112903
anchor_top = 0.0194444
anchor_right = 0.98871
anchor_bottom = 0.983333
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SHOP/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
text = "SHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="money" type="Label" parent="SHOP/VBoxContainer"]
layout_mode = 2
text = "Money:"
vertical_alignment = 1

[node name="Container" type="NinePatchRect" parent="SHOP/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemContainer" type="GridContainer" parent="SHOP/VBoxContainer/Container"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.045809
anchor_top = 0.0202993
anchor_right = 0.398268
anchor_bottom = 0.840812
offset_left = 2.0
offset_right = 2.0
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 0
columns = 4
metadata/_edit_lock_ = true

[node name="InfoContainer" type="NinePatchRect" parent="SHOP/VBoxContainer/Container"]
layout_mode = 2
anchor_left = 0.485656
anchor_top = 0.0192308
anchor_right = 0.918033
anchor_bottom = 0.833333
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("3_o5td3")
region_rect = Rect2(49, 97, 30, 30)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="SHOP/VBoxContainer/Container/InfoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -3.99997
offset_bottom = -3.99995
grow_horizontal = 2
grow_vertical = 2

[node name="IMGContainer" type="TextureRect" parent="SHOP/VBoxContainer/Container/InfoContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_ildal")
expand_mode = 1

[node name="backBtn" parent="SHOP/VBoxContainer" instance=ExtResource("5_3qhay")]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "BACK
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ildal")
}
autoplay = "RESET"

[connection signal="pressed" from="Menu/VBoxContainer/PLAYGAME" to="." method="_on_playgame_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/SHOP" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/SETTING" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="SETTING/VBoxContainer/HBoxContainer/properties/res_opt_btn" to="." method="_on_res_opt_btn_item_selected"]
[connection signal="pressed" from="SETTING/VBoxContainer/BackBtn" to="." method="_on_setting_back_btn_pressed"]
[connection signal="pressed" from="SHOP/VBoxContainer/backBtn" to="." method="_on_shop_back_btn_pressed"]
